deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: masareef
  annotations:
    # Backstage (027): links this workload to the catalog component.
    backstage.io/kubernetes-id: masareef
spec:
  selector:
    app: masareef
  ports:
    - port: 80
      targetPort: 8080
